@@ -1,0 +1,319 @@
+#textdomain wesnoth-lib
+###
+### Definition of the window to select an addon for installation.
+###
+
+[window]
+	id = "addon_list"
+	description = "Addon selection dialog."
+
+	[resolution]
+		definition = "default"
+
+		automatic_placement = "true"
+		vertical_placement = "center"
+		horizontal_placement = "center"
+
+		[grid]
+			
+			[row]
+				grow_factor = 0
+
+				[column]
+					grow_factor = 1
+
+					border = "all"
+					border_size = 5
+					horizontal_alignment = "left"
+					[label]
+						definition = "title"
+
+						label = "Get Add-ons"
+					[/label]
+
+				[/column]
+
+			[/row]
+
+			[row]
+				grow_factor = 0
+
+				[column]
+					grow_factor = 1
+
+					border = "all"
+					border_size = 5
+					horizontal_alignment = "left"
+
+					[label]
+						definition = "default"
+
+						label = "Choose the add-on to download."
+					[/label]
+
+				[/column]
+
+			[/row]
+			
+			[row]
+				grow_factor = 1
+
+				[column]
+					grow_factor = 1
+
+					horizontal_grow = "true"
+					vertical_grow = "true"
+
+					[listbox]
+						id = "addon_list"
+						definition = "default"
+
+						assume_fixed_row_size = "true"
+
+						[header]
+
+							[row]
+
+								[column]
+									grow_factor = 1
+								 	horizontal_grow = "true"
+
+									[label]
+										definition = "default"
+
+										label = "Name"
+									[/label]
+ 
+ 								[/column]
+								
+								[column]
+									grow_factor = 1
+								 	horizontal_grow = "true"
+
+									[label]
+										definition = "default"
+
+										label = "Version"
+									[/label]
+
+								[/column]
+
+								[column]
+									grow_factor = 1
+								 	horizontal_grow = "true"
+
+									[label]
+										definition = "default"
+
+										label = "Author"
+									[/label]
+
+								[/column]
+
+								[column]
+									grow_factor = 1
+								 	horizontal_grow = "true"
+
+									[label]
+										definition = "default"
+
+										label = "Downloads"
+									[/label]
+
+								[/column]
+
+								[column]
+									grow_factor = 1
+								 	horizontal_grow = "true"
+
+									[label]
+										definition = "default"
+
+										label = "Size"
+									[/label]
+
+								[/column]
+
+							[/row]
+
+						[/header]
+
+						[list_definition]
+
+							[row]
+
+								[column]
+								 	vertical_grow = "true"
+								 	horizontal_grow = "true"
+
+									[toggle_panel]
+										definition = "default"
+
+										return_value = -1
+										[grid]
+
+											[row]
+
+												[column]
+													grow_factor = 1
+													horizontal_grow = "true"
+
+													border = "all"
+													border_size = 5
+#													horizontal_alignment = "left"
+
+													[label]
+														id = "name"
+														definition = "default"
+
+													[/label]
+
+												[/column]
+
+												[column]
+													grow_factor = 1
+													horizontal_grow = "true"
+
+													border = "all"
+													border_size = 5
+#													horizontal_alignment = "left"
+
+
+													[label]
+														id = "version"
+														definition = "default"
+
+													[/label]
+
+												[/column]
+
+												[column]
+													grow_factor = 1
+													horizontal_grow = "true"
+
+													border = "all"
+													border_size = 5
+#													horizontal_alignment = "left"
+
+
+													[label]
+														id = "author"
+														definition = "default"
+
+													[/label]
+
+												[/column]
+
+												[column]
+													grow_factor = 1
+													horizontal_grow = "true"
+
+													border = "all"
+													border_size = 5
+#													horizontal_alignment = "left"
+
+
+													[label]
+														id = "downloads"
+														definition = "default"
+
+													[/label]
+
+												[/column]
+
+												[column]
+													grow_factor = 1
+													horizontal_grow = "true"
+
+													border = "all"
+													border_size = 5
+#													horizontal_alignment = "left"
+
+
+													[label]
+														id = "size"
+														definition = "default"
+
+													[/label]
+
+												[/column]
+
+											[/row]
+
+										[/grid]
+
+									[/toggle_panel]
+
+								[/column]
+
+							[/row]
+
+						[/list_definition]
+
+					[/listbox]
+
+				[/column]
+
+			[/row]
+
+			[row]
+				grow_factor = 0
+
+				[column]
+					grow_factor = 1
+					horizontal_grow = "true" 
+
+					[grid]
+
+						[row]
+							grow_factor = 0
+							
+							[column]
+
+								[spacer]
+									definition = "default"
+								[/spacer]
+
+							[/column]
+
+							[column]
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "right"
+
+								[button]
+									id = "ok"
+									definition = "default"
+
+									label = "Install" # fixme text might change between install and update...
+								[/button]
+
+							[/column]
+
+							[column]
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "right"
+
+								[button]
+									id = "cancel"
+									definition = "default"
+
+									label = "Cancel"
+								[/button]
+
+							[/column]
+
+						[/row]
+
+					[/grid]
+
+				[/column]
+
+			[/row]
+
+		[/grid]
+
+	[/resolution]
+
+[/window]
