@@ -32,6 +32,8 @@ Version 1.5.10+svn:
      reachmap
    * When moving up or down in a listbox with a horizontal scrollbar, the
      listbox no longer changes the position of the horizontal scrollbar
+   * Added experimental new addon download dialog (Only available when
+     starting with --new-widgets.)
  * WML Engine:
    * Fixed bug #13024: Conditional [allow_undo] not always working right
 
